# sputnikvm

./: Cargo.toml  README.md
network/classic/: Cargo.toml
network/classic/src/: lib.rs
network/foundation/: Cargo.toml
network/foundation/src/: lib.rs
precompiled/bn128/: Cargo.toml
precompiled/modexp/: Cargo.toml
src/: lib.rs  memory.rs  pc.rs  stack.rs  transaction.rs
src/commit/: account.rs
src/eval/: lifecycle.rs  mod.rs  util.rs
src/eval/run/: system.rs
src/patch/: precompiled.rs
