[package]
name = "sputnikvm"
version = "0.10.1"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "SputnikVM - a Portable Blockchain Virtual Machine"
repository = "https://github.com/ethereumproject/sputnikvm"
keywords = ["no_std", "ethereum"]

[lib]
name = "sputnikvm"

[dependencies]
sha3 = "0.6"
sha2 = "0.6"
ripemd160 = "0.6"
digest = "0.6"

secp256k1-plus = { version = "0.5.7", optional = true }
libsecp256k1 = { version = "0.1", optional = true }


[dependencies.etcommon-block-core]
git = "https://github.com/enigmampc/etcommon-rs.git"
rev = "develop"
default-features = false

[dependencies.etcommon-block]
git = "https://github.com/enigmampc/etcommon-rs.git"
rev = "develop"
default-features = false
optional = true

[dependencies.etcommon-rlp]
git = "https://github.com/enigmampc/etcommon-rs.git"
rev = "develop"
default-features = false

[dependencies.etcommon-bigint]
git = "https://github.com/enigmampc/etcommon-rs.git"
rev = "develop"
default-features = false
features = ["rlp"]


[dev-dependencies]
etcommon-hexutil = "0.2"

[features]
default = ["std", "c-secp256k1"]
c-secp256k1 = ["secp256k1-plus", "etcommon-block/c-secp256k1"]
rust-secp256k1 = ["libsecp256k1", "etcommon-block/rust-secp256k1"]
std = ["etcommon-block-core/std", "etcommon-rlp/std", "etcommon-bigint/std", "etcommon-block"]

[workspace]
members = [
  "./jsontests",
  "./regtests",
  "./gethrpc",
  "./stateful",
  "./cli",
  "./precompiled/modexp",
  "./precompiled/bn128",
  "./network/foundation",
  "./network/classic",
  "./network/ellaism",
  "./network/musicoin",
  "./network/expanse",
  "./network/ubiq",
]
