[package]
name = "sputnikvm-network-classic"
version = "0.10.0"
description = "Ethereum Classic patches for SputnikVM."
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]

[dependencies]
sputnikvm = { path = "../..", default-features =  false }
etcommon-bigint = { path = "../../../thirdparties/etcommon-rs/bigint", default-features = false }
