[package]
name = "sputnikvm-precompiled-bn128"
version = "0.10.0"
description = "bn128 precompiled contracts for SputnikVM."
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/ethereumproject/sputnikvm"

[dependencies]
sputnikvm = { version = "0.10", path = "../.." }
bn-plus = { version = "0.4" }

[dependencies.etcommon-bigint]
git = "https://github.com/enigmampc/etcommon-rs.git"
rev = "develop"
default-features = false
