[package]
name = "sputnikvm-precompiled-modexp"
version = "0.10.0"
description = "modexp precompiled contracts for SputnikVM."
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/ethereumproject/sputnikvm"

[dependencies]
sputnikvm = { version = "0.10", path = "../.." }
num-bigint = "0.1"

[dependencies.etcommon-bigint]
git = "https://github.com/enigmampc/etcommon-rs.git"
rev = "develop"
default-features = false

[dev-dependencies]
etcommon-hexutil = "0.2"
